[fixed] Fix formitem colon invisible in vertical layout issue

--- a/src/cypd.css
+++ b/src/cypd.css
@@ -2178,6 +2178,10 @@ svg.cypd-icon.solid-right * {
     content: ':';
 }
 
+.cypd-formitem-wrapper.verical .cypd-formitem-label:not(.no-colon)::after {
+    right: -5px;
+}
+
 .cypd-formitem-wrapper.error {
     margin-bottom: 20px;
 }
